--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=8071
-spring.data.mongodb.database=login
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.database=final
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+spring.activemq.broker-url=mongodb+srv://yohanrabepro:root@final.13sqtog.mongodb.net/?retryWrites=true&w=majority
+
+jwt.secret=======================Yohan=Spring===========================
+jwt.expiration=86400000
