--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>reprizy</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
