--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.data.mongodb.uri=mongodb+srv://Yohan:root@final.13sqtog.mongodb.net/?retr
 jwt.secret=======================Yohan=Spring===========================
 jwt.expiration=86400000
 
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=**10MB**
+spring.servlet.multipart.max-request-size=**10MB**
